tests/specs/serve/type_check/main.out
Check [WILDCARD]
TS2353 [ERROR]: Object literal may only specify known properties, and 'bad' does not exist in type 'ServeDefaultExport'.
  bad() {
  ~~~
    at [WILDCARD]main.ts:2:3

error: Type checking failed.
